--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-*.mp4
-node_modules
+# Don't check auto-generated stuff into git
+coverage
 build
+node_modules
+stats.json
+errorShots
+
+# Cruft
+.DS_Store
+npm-debug.log
+.idea
+
+.env
+
+# Build output
+.serverless/
+dist/
+lib/
+
+*.mp4
